# example-sqlx-sqlite

./: .env  Cargo.toml  README.md
migrations/: 20220205194830_create_user.down.sql  20220205194830_create_user.up.sql
scripts/: init_db
scripts/migrations/: new  run
src/: main.rs
