[package]
name = "example-sqlx-sqlite-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
sqlx = { version = "0.5.10", features = [
    "sqlite",
    "migrate",
    "macros",
    "uuid",
    "chrono",
    "runtime-tokio-rustls"
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "0.8.2"
features = [
    "v4", # Lets you generate random UUIDs
    # "fast-rng", # Use a faster (but still sufficiently random) RNG
    # "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
